feat: 약관 / 개인정보 동의 플로우 & 코스 관련 상세 보기 추가